# SDL2GameEngineReborn

./: .gitignore  CMakeLists.txt  Makefile  game  main.cpp
src/: main.cpp
src/components/: component.hpp  control_component.cpp  control_component.hpp  transform_component.cpp  transform_component.hpp
src/configs/: constants.h
src/core/: engine.cpp  engine.hpp
src/entities/: entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp
